--- a/NavigationPageApp/NavigationPageApp/MainPage.xaml
+++ b/NavigationPageApp/NavigationPageApp/MainPage.xaml
@@ -2,10 +2,13 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:NavigationPageApp"
-             x:Class="NavigationPageApp.MainPage">
+             x:Class="NavigationPageApp.MainPage"
+             Title="Navegation Page">
 
-	<Label Text="Welcome to Xamarin.Forms!" 
-           VerticalOptions="Center" 
-           HorizontalOptions="Center" />
+    <StackLayout>
+       <!-- <Button WidthRequest="300" HeightRequest="300" Text="Esto es navegation page"/>-->
+        <Label Text="Esto es una página de navegación"/>
+        <Button Text="Página 2" Clicked="SiguienteButton_Clicked"/>
+    </StackLayout>
 
 </ContentPage>
